--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
     </div>
   </nav>
 
+  <!-- Presentacion -->
+  <section class="main-header" id="presentacion"> 
+   <div class="container presentacionbox">
+    <div class="container">
+      <h1 class="yosoyh1">Yo soy, <b class="h1">Andrea Pacheco</b></p></h1>
+      <p class="presentacionp">Comenzando en el campo de la programación</p>
+       <hr>
+       <h3 class="presentacion my-5">
+          <p><b>
+            Edad:
+            <br><br>
+            Dirección:
+            <br><br>
+            Número:
+            <br><br>
+            Correo:
+            </b></p>
+            <p class="presentacionp2">
+            19
+            <br><br>
+            Av. Grecia, Ñuñoa. Santiago, Chile
+            <br><br>
+            +56 9 7135 0448
+            <br><br> 
+            aipachecor04@mail.com
+          </p>
+       </h3>
+    </div>
+    <img width="300" src="./assets/img/img1.jpg" alt="Foto de Andrea Pacheco">
+   </div>
+  </div>
+  </section>
+  </header>
 
+
+ 
 </body>
 </html>
