--- a/index.html
+++ b/index.html
@@ -310,6 +310,18 @@
 </section>
 </main>
   
-  
+<footer class="footer text-center py-4">
+  <a href="https://www.linkedin.com/in/andrea-pacheco-ap1803/" class="acolor mx-2" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+  <a href="https://github.com/AndreaPacheco05" class="acolor mx-2" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+  <a href="mailto:aipachecor04@gmail.com" class="acolor mx-2"><i class="fas fa-envelope fa-2x"></i></a>
+  <a href="https://www.instagram.com/itsmepach__/" class="acolor mx-2"><i class="fa-brands fa-instagram fa-2x"></i></a>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 py-2 text-center text-md-end">
+          <p class="m-0">© Todos los derechos reservados | Desafio Latam</p>
+        </div>
+      </div>
+    </div>
+</footer>  
 </body>
 </html>
